Fixed bug with new grid CSS re: alignment of cells

--- a/styleguide/scss/core/_core-css-grid.scss
+++ b/styleguide/scss/core/_core-css-grid.scss
@@ -374,8 +374,8 @@
         grid-column-end: var(--sf-grid-col-end);
         grid-row-start: var(--sf-grid-row-start);
         grid-row-end: var(--sf-grid-row-end);
-        justify-self: var(--sf-grid-align);
-        align-self: var(--sf-grid-vertical-align);
+        justify-self: var(--sf-grid-align-items);
+        align-self: var(--sf-grid-vertical-align-items);
 
         & > * {
 
